Make panels resize according to how many are on screen. This needs quite a bit of smart logic to actually behave correctly. Also, panels should be scrolling off screen rather than growing very tiny. Define minimum width

--- a/css/browser/panels/Panel.css
+++ b/css/browser/panels/Panel.css
@@ -1,4 +1,5 @@
 .Panel {
+	position: absolute;
 	border: 3px solid #a0a0a0;
 	border-radius: 7px;
 	-moz-border-radius: 7px;
